appId: com.tuvotodecide
---
- tapOn:
    id: changePinNewConfirmFinishButton
- assertVisible:
    id: changePinNewConfirmResultModalContainer
- tapOn:
    id: changePinNewConfirmResultModalButton
