appId: com.tuvotodecide
---
# INGRESO DE PIN (Inicia directamente en la pantalla de login)
# 1. Primer intento con PIN erróneo
- inputText: "1234"

# Esperar el modal de error y darle a OK
- extendedWaitUntil:
    visible:
      id: "loginUserInfoModalButton"
    timeout: 10000

- tapOn:
    id: "loginUserInfoModalButton"

# 2. Segundo intento con PIN erróneo
- inputText: "1234"

# Verificar que el modal de error aparece de nuevo
- extendedWaitUntil:
    visible:
      id: "loginUserInfoModalButton"
    timeout: 10000