appId: com.tuvotodecide
name: loginWrongPin
---
- launchApp
- tapOn:
    id: connectLoginButton
- waitForAnimationToEnd
- inputText: '9999'
- assertVisible:
    id: loginUserInfoModalButton
- assertVisible:
    id: loginUserInfoModalContainer
- stopApp