appId: com.tuvotodecide
name: onboardingNextFlow
onFlowStart:
  - runFlow: ../../components/setup/skipDebuger.yaml
---
- extendedWaitUntil:
    visible:
      id: connectInfoButton
    timeout: 12000
- tapOn:
    id: connectInfoButton
- waitForAnimationToEnd:
    timeout: 2000
- extendedWaitUntil:
    visible:
      id: onboardingSlideImage_0
    timeout: 8000
- waitForAnimationToEnd:
    timeout: 1000
- assertVisible:
    id: onboardingSlideImage_0
- assertVisible:
    id: onboardingSlideTextContainer_0
- tapOn:
    id: onboardingGetStartedButton

- waitForAnimationToEnd:
    timeout: 2000
- extendedWaitUntil:
    visible:
      id: onboardingSlideImage_1
    timeout: 8000
- scrollUntilVisible:
    element:
      id: onboardingSlideImage_1
    direction: LEFT
    timeout: 8000
- waitForAnimationToEnd:
    timeout: 1000
- assertVisible:
    id: onboardingSlideImage_1
- assertVisible:
    id: onboardingSlideTextContainer_1
- tapOn:
    id: onboardingGetStartedButton

- waitForAnimationToEnd:
    timeout: 2000
- extendedWaitUntil:
    visible:
      id: onboardingSlideImage_2
    timeout: 8000
- scrollUntilVisible:
    element:
      id: onboardingSlideImage_2
    direction: LEFT
    timeout: 8000
- waitForAnimationToEnd:
    timeout: 1000
- assertVisible:
    id: onboardingSlideImage_2
- assertVisible:
    id: onboardingSlideTextContainer_2
- tapOn:
    id: onboardingGetStartedButton

- waitForAnimationToEnd:
    timeout: 2000
- extendedWaitUntil:
    visible:
      id: onboardingSlideImage_3
    timeout: 8000
- scrollUntilVisible:
    element:
      id: onboardingSlideImage_3
    direction: LEFT
    timeout: 8000
- waitForAnimationToEnd:
    timeout: 1000
- assertVisible:
    id: onboardingSlideImage_3
- assertVisible:
    id: onboardingSlideTextContainer_3
- tapOn:
    id: onboardingGetStartedButton

- waitForAnimationToEnd:
    timeout: 2000
- extendedWaitUntil:
    visible:
      id: onboardingSlideImage_4
    timeout: 8000
- scrollUntilVisible:
    element:
      id: onboardingSlideImage_4
    direction: LEFT
    timeout: 8000
- waitForAnimationToEnd:
    timeout: 1000
- assertVisible:
    id: onboardingSlideImage_4
- assertVisible:
    id: onboardingSlideTextContainer_4
- tapOn:
    id: onboardingGetStartedButton

- waitForAnimationToEnd:
    timeout: 2000
- extendedWaitUntil:
    notVisible:
      id: onboardingSlideImage_4
    timeout: 8000
- assertNotVisible:
    id: onboardingSlideImage_4
- assertNotVisible:
    id: onboardingSlideTextContainer_4

- extendedWaitUntil:
    visible:
      id: MiVotoLogoImage
    timeout: 8000
- assertVisible:
    id: MiVotoLogoImage

