appId: com.tuvotodecide
name: onboardingXButton
onFlowStart:
  - runFlow: ../../components/setup/skipDebuger.yaml
  
---
- extendedWaitUntil:
    visible:
      id: connectInfoButton
    timeout: 12000
- tapOn:
    id: connectInfoButton
- waitForAnimationToEnd:
    timeout: 2000
- extendedWaitUntil:
    visible:
      id: onboardingSlideImage_0
    timeout: 8000
- assertVisible:
    id: onboardingSlideImage_0
- assertVisible:
    id: onboardingSlideTextContainer_0
- swipe:           
    direction: LEFT
- waitForAnimationToEnd:
    timeout: 2000

- extendedWaitUntil:
    visible:
      id: onboardingSlideImage_1
    timeout: 8000
- assertVisible:
    id: onboardingSlideImage_1
- assertVisible:
    id: onboardingSlideTextContainer_1
- tapOn:
    id: onboardingGetStartedButton

- waitForAnimationToEnd:
    timeout: 2000
- extendedWaitUntil:
    visible:
      id: onboardingSlideImage_2
    timeout: 8000
- assertVisible:
    id: onboardingSlideImage_2
- assertVisible:
    id: onboardingSlideTextContainer_2
- swipe:           
    direction: LEFT
- waitForAnimationToEnd:
    timeout: 2000

- extendedWaitUntil:
    visible:
      id: onboardingSlideImage_3
    timeout: 8000
- assertVisible:
    id: onboardingSlideImage_3
- assertVisible:
    id: onboardingSlideTextContainer_3

- tapOn:
    id: onboardingSkipButton

- waitForAnimationToEnd:
    timeout: 2000
- extendedWaitUntil:
    notVisible:
      id: onboardingSlideImage_3
    timeout: 8000
- assertNotVisible:
    id: onboardingSlideImage_3
- assertNotVisible:
    id: onboardingSlideTextContainer_3

- extendedWaitUntil:
    visible:
      id: MiVotoLogoImage
    timeout: 8000
- assertVisible:
    id: MiVotoLogoImage

