appId: com.tuvotodecide
---
- runFlow:
    file: ../../components/voting/uploadElectoralRecord.yaml
    env:
        TEST_TYPE: 'new'
        CAPTURE_TYPE: 'camera'

#-------------------------------------
- tapOn: Agregar Nueva Acta

- tapOn:
    id: cameraShutterButton
- tapOn:
    id: analyzePhotoButton

- extendedWaitUntil:
    visible:
      text: Acta analizada automáticamente. Revise y edite los datos si es necesario.
    timeout: 25000

- scrollUntilVisible:
    element:
      id: editButton

- tapOn:
    id: editButton

- runFlow: ../../components/records/electoralRecord1.yaml

- tapOn:
    id: nextButton

- extendedWaitUntil:
    visible:
      id: publishAndCertifyButton
    timeout: 5000

- tapOn:
    id: publishAndCertifyButton

- assertVisible: Acta ya existe
