appId: com.tuvotodecide
name: acceptGuardInvitation
onFlowStart:
  - runFlow: 
        file: ../../../../components/setup/initialSetup.yaml
        env:
            CHANGE_USER: 'true'
            USER: ${MAESTRO_SECOND_USER_PHOTO_NAME}
---
#- tapOn:
#    id: connectLoginButton
#- tapOn:
#    id: loginUserTitle
#- tapOn:
#    id: loginUserForgotPasswordButton
#
#- runFlow:
#    file: ../../../../components/recovery/recoveryQR.yaml
#    env: 
#      PHOTO_NAME: ${MAESTRO_SECOND_USER_PHOTO_NAME}
#      TEST_TYPE: 'pass'
#
#- extendedWaitUntil:
#    visible:
#        id: loginUserContentContainer
#    #timeout: 10000
#
#- runFlow:
#    file: ../../../../components/auth/login.yaml
#    env: 
#      PIN: ${MAESTRO_CORRECT_PIN}
    
- extendedWaitUntil:
    visible:
      id: tabButton_Profile
    timeout: 15000
- tapOn:
    id: tabButton_Profile
- waitForAnimationToEnd:
    timeout: 1000
- scrollUntilVisible:
        element:
            id: profileMenuItem_4
        direction: DOWN
- waitForAnimationToEnd:
        timeout: 1000
- extendedWaitUntil:
    visible:
      id: profileMenuItem_4
    timeout: 12000
- tapOn:
    id: profileMenuItem_4
- waitForAnimationToEnd:
    timeout: 1000

- extendedWaitUntil:
    visible:
      id: guardiansAdminInvitationItem_14967419
    timeout: 12000
- assertVisible:
    id: guardiansAdminInvitationItem_14967419
- extendedWaitUntil:
    visible:
      id: guardiansAdminInvitationItemAccept_14967419
    timeout: 12000
- tapOn:
    id: guardiansAdminInvitationItemAccept_14967419
- waitForAnimationToEnd:
    timeout: 1000
- scrollUntilVisible:
        element:
            id: guardiansAdminProtectedItem_14967419
        direction: DOWN
- extendedWaitUntil:
        visible:
            id: guardiansAdminProtectedItem_14967419
        timeout: 12000
- assertVisible:
        id: guardiansAdminProtectedItem_14967419




